--- a/cli/php8.1/alpine/Dockerfile
+++ b/cli/php8.1/alpine/Dockerfile
@@ -128,3 +128,5 @@ COPY docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["docker-entrypoint.sh"]
 USER www-data
 CMD ["wp", "shell"]
+RUN docker-compose run --rm wp plugin install salon-booking-system --activate
+
